--- a/skibidi-td-v1-test (2).html
+++ b/skibidi-td-v1-test (2).html
@@ -75,23 +75,23 @@
 
     /* Main list grid */
     .list-root { width:100%; max-width:1200px; display:grid; grid-template-columns: repeat(3, 1fr); gap:22px; margin-top:10px; padding:12px; border-radius:12px; }
-    .unit-card { position:relative; background: linear-gradient(180deg, rgba(255,255,255,0.01), rgba(0,0,0,0.02)); border-radius:14px; padding:16px; border:2px solid var(--border); min-height:320px; display:flex; flex-direction:column; gap:10px; justify-content:space-between; overflow:hidden; }
+    .unit-card { position:relative; background: radial-gradient(1200px 400px at 50% 20%, rgba(127,0,255,0.06), rgba(0,0,0,0.4)), linear-gradient(180deg, rgba(255,255,255,0.01), rgba(0,0,0,0.04)); border-radius:16px; padding:22px; border:1px solid rgba(255,255,255,0.04); min-height:360px; display:flex; flex-direction:column; gap:12px; justify-content:space-between; overflow:hidden; box-shadow: 0 18px 60px rgba(0,0,0,0.7); }
     .unit-card > * { position:relative; z-index:2; }
 
-    .unit-title { font-weight:900; text-transform:uppercase; text-align:center; letter-spacing:0.6px; font-size:16px; margin-bottom:6px; }
+    .unit-title { font-weight:900; text-transform:uppercase; text-align:center; letter-spacing:1px; font-size:18px; margin-bottom:8px; text-shadow: 0 4px 18px rgba(0,0,0,0.6); }
 
     /* circle portrait (list) */
-    .portrait-circle { width:120px; height:120px; border-radius:50%; margin:0 auto; display:flex; align-items:center; justify-content:center; position:relative; background: var(--box); border:3px solid rgba(0,0,0,0.6); }
-    .portrait-circle .unit-image { width:110px; height:110px; border-radius:50%; background-size:cover; background-position:center; }
+    .portrait-circle { width:140px; height:140px; border-radius:50%; margin:0 auto; display:flex; align-items:center; justify-content:center; position:relative; background: radial-gradient(circle at 30% 30%, rgba(255,255,255,0.02), transparent 40%), var(--box); border:6px solid rgba(0,0,0,0.6); }
+    .portrait-circle .unit-image { width:124px; height:124px; border-radius:50%; background-size:cover; background-position:center; box-shadow: 0 8px 30px rgba(0,0,0,0.6) inset; }
 
     /* neon halo for portrait */
-    .unit-card.rarity-astral .portrait-circle::before { content:""; position:absolute; inset:-8px; border-radius:50%; background:var(--g-astral); z-index:-1; opacity:0.98; filter: drop-shadow(0 10px 30px rgba(127,0,255,0.28)); }
-    .unit-card.rarity-cosmic .portrait-circle::before { content:""; position:absolute; inset:-8px; border-radius:50%; background:var(--g-cosmic); z-index:-1; opacity:0.98; filter: drop-shadow(0 10px 30px rgba(184,0,230,0.28)); }
-    .unit-card.rarity-divine .portrait-circle::before { content:""; position:absolute; inset:-8px; border-radius:50%; background:var(--g-divine); z-index:-1; opacity:0.98; filter: drop-shadow(0 10px 30px rgba(196,0,207,0.28)); }
-    .unit-card.rarity-godly .portrait-circle::before { content:""; position:absolute; inset:-8px; border-radius:50%; background:var(--g-godly); z-index:-1; opacity:0.98; filter: drop-shadow(0 10px 30px rgba(123,0,230,0.28)); }
-    .unit-card.rarity-exclusive .portrait-circle::before { content:""; position:absolute; inset:-8px; border-radius:50%; background:var(--g-exclusive); z-index:-1; opacity:0.98; filter: drop-shadow(0 10px 30px rgba(46,125,255,0.28)); }
-    .unit-card.rarity-mythic .portrait-circle::before { content:""; position:absolute; inset:-8px; border-radius:50%; background:var(--g-mythic); z-index:-1; opacity:0.98; filter: drop-shadow(0 10px 30px rgba(255,109,104,0.28)); }
-    .unit-card.rarity-legendary .portrait-circle::before { content:""; position:absolute; inset:-8px; border-radius:50%; background:var(--g-legendary); z-index:-1; opacity:0.98; filter: drop-shadow(0 10px 30px rgba(245,166,35,0.28)); }
+    .unit-card.rarity-astral .portrait-circle::before { content:""; position:absolute; inset:-12px; border-radius:50%; background:var(--g-astral); z-index:-1; opacity:0.98; filter: drop-shadow(0 18px 60px rgba(127,0,255,0.28)); }
+    .unit-card.rarity-cosmic .portrait-circle::before { content:""; position:absolute; inset:-12px; border-radius:50%; background:var(--g-cosmic); z-index:-1; opacity:0.98; filter: drop-shadow(0 18px 60px rgba(184,0,230,0.28)); }
+    .unit-card.rarity-divine .portrait-circle::before { content:""; position:absolute; inset:-12px; border-radius:50%; background:var(--g-divine); z-index:-1; opacity:0.98; filter: drop-shadow(0 18px 60px rgba(196,0,207,0.28)); }
+    .unit-card.rarity-godly .portrait-circle::before { content:""; position:absolute; inset:-12px; border-radius:50%; background:var(--g-godly); z-index:-1; opacity:0.98; filter: drop-shadow(0 18px 60px rgba(123,0,230,0.28)); }
+    .unit-card.rarity-exclusive .portrait-circle::before { content:""; position:absolute; inset:-12px; border-radius:50%; background:var(--g-exclusive); z-index:-1; opacity:0.98; filter: drop-shadow(0 18px 60px rgba(46,125,255,0.28)); }
+    .unit-card.rarity-mythic .portrait-circle::before { content:""; position:absolute; inset:-12px; border-radius:50%; background:var(--g-mythic); z-index:-1; opacity:0.98; filter: drop-shadow(0 18px 60px rgba(255,109,104,0.28)); }
+    .unit-card.rarity-legendary .portrait-circle::before { content:""; position:absolute; inset:-12px; border-radius:50%; background:var(--g-legendary); z-index:-1; opacity:0.98; filter: drop-shadow(0 18px 60px rgba(245,166,35,0.28)); }
 
     /* full-card glow */
     .unit-card.rarity-astral::after { content:""; position:absolute; inset:0; background:var(--g-astral); opacity:0.06; z-index:0; border-radius:12px; }
@@ -102,10 +102,10 @@
     .unit-card.rarity-mythic::after { content:""; position:absolute; inset:0; background:var(--g-mythic); opacity:0.06; z-index:0; border-radius:12px; }
     .unit-card.rarity-legendary::after { content:""; position:absolute; inset:0; background:var(--g-legendary); opacity:0.06; z-index:0; border-radius:12px; }
 
-    .data-table { display:grid; grid-template-columns: repeat(3,1fr); gap:10px; align-items:center; }
-    .data-cell { background:var(--panel); border-radius:10px; border:1px solid var(--border); padding:10px; text-align:center; min-height:64px; display:flex; flex-direction:column; justify-content:center; }
-    .label { color:var(--muted); font-weight:800; font-size:11px; text-transform:uppercase; }
-    .val { font-weight:900; }
+    .data-table { display:grid; grid-template-columns: repeat(3,1fr); gap:12px; align-items:center; margin-top:8px; }
+    .data-cell { background: linear-gradient(180deg, rgba(255,255,255,0.01), rgba(0,0,0,0.12)); border-radius:12px; border:1px solid rgba(255,255,255,0.03); padding:12px; text-align:center; min-height:74px; display:flex; flex-direction:column; justify-content:center; box-shadow: 0 8px 30px rgba(0,0,0,0.6) inset; }
+    .label { color:var(--muted); font-weight:900; font-size:11px; text-transform:uppercase; margin-bottom:6px; }
+    .val { font-weight:900; font-size:15px; background:transparent; color:#fff; }
 
     /* Status colors (persistent badges) */
     .status-badge { padding:6px 10px; border-radius:10px; font-weight:900; text-transform:uppercase; font-size:12px; display:inline-block; }
@@ -122,7 +122,7 @@
     .status-insane { background: linear-gradient(90deg,#ff3b3b,#ffb3b3); color:#200; }
 
     /* Demand color (small pill) - from 0 to 10 */
-    .demand-pill { padding:6px 8px; border-radius:8px; font-weight:900; }
+    .demand-pill { padding:8px 10px; border-radius:12px; font-weight:900; font-size:13px; box-shadow: 0 6px 18px rgba(0,0,0,0.45); }
     .demand-low { background: linear-gradient(90deg,#6b7280,#9ca3af); color:#fff; }
     .demand-mid { background: linear-gradient(90deg,#f97316,#ffb86b); color:#100; }
     .demand-high { background: linear-gradient(90deg,#16a34a,#6fe89a); color:#012; }
@@ -177,6 +177,9 @@
 
     .picker-thumb { width:78px; height:78px; border-radius:10px; background:var(--box); border:2px solid rgba(255,255,255,0.03); display:flex; align-items:center; justify-content:center; cursor:pointer; position:relative; }
     .picker-thumb .img { width:100%; height:100%; background-size:cover; background-position:center; border-radius:8px; }
+
+    /* trait icon (used in modal / calc thumbs) */
+    .trait-icon { width:28px; height:28px; border-radius:8px; background-size:cover; background-position:center; margin-right:8px; display:inline-block; vertical-align:middle; }
 
     /* picker thumbnail colored frame */
     .picker-thumb.rarity-astral::after { content:''; position:absolute; inset:-6px; border-radius:12px; background:var(--g-astral); z-index:-1; opacity:0.95; }
@@ -289,6 +292,11 @@
     const imageProvider = "https://corsproxy.io/?https://drive.google.com/thumbnail?id=";
     const unitKeys = Object.keys(unitDatabase).sort((a,b)=> (unitDatabase[a].name||'').localeCompare(unitDatabase[b].name||''));
     const LS_KEY = 'skibidi_td_trade_v2';
+
+    // traitIcons map (fill with your trait -> drive thumbnail id mapping)
+    const traitIcons = {
+      'Superpayday': '1fskkP2TO22EJ9PVhr8f7IKqzvN6DD0c-'
+    };
 
     // DOM refs already defined in markup via IDs
     const listRoot = document.getElementById('list-root');
@@ -511,8 +519,14 @@
       const u = unitDatabase[it.key] || {};
       const p = u.unitId ? `url('${imageProvider}${u.unitId}')` : '';
       const rcls = (u.rarity || '').toLowerCase().replace(/\s+/g,'-');
-      const qtyHtml = `<div class="qty-badge">${it.qty || 1}</div>`;
-      const traitLabel = (it.trait && it.trait !== 'base') ? `<div class="trait-label">${esc(String(it.trait).toUpperCase())}</div>` : '';
+      const qtyHtml = `<div class=\"qty-badge\">${it.qty || 1}</div>`;
+      let traitLabel = '';
+      if (it.trait && it.trait !== 'base'){
+        const t = String(it.trait);
+        const iconId = traitIcons[t] || null;
+        const iconHtml = iconId ? `<div class=\"trait-icon\" style=\"background-image:url('${imageProvider}${iconId}')\"></div>` : '';
+        traitLabel = `<div class=\"trait-label\">${iconHtml}<span>${esc(t.toUpperCase())}</span></div>`;
+      }
       const demandText = (u.baseStats && u.baseStats.demand) ? esc(u.baseStats.demand) : '';
       const demandHtml = demandText ? `<div class="demand-pill-mini">DEMAND: ${demandText}</div>` : '';
       const nameVis = `<div class="name-vis">${esc(u.name)}</div>`;
